--- a/structures/service_manager/index.html
+++ b/structures/service_manager/index.html
@@ -34,13 +34,14 @@
         <div class="sidebar__title">SocialITEC</div>
       </div>
       <nav class="sidebar__nav">
-        <a href="layout/alumnos" class="sidebar__nav-link user-alumno" data-src="../structures/students/index.html">Alumnos</a>
-        <a href="layout/plantillas" class="sidebar__nav-link user-plantilla" data-src="../structures/templates/index.html">Plantillas</a>
-        <a href="layout/instituciones" class="sidebar__nav-link user-institucion" data-src="../structures/institutions/index.html">Instituciones</a>
-        <a href="layout/responsables" class="sidebar__nav-link user-responsable" data-src="../structures/program_manager/index.html">Responsables</a>
-        <a href="layout/solicitudes" class="sidebar__nav-link user-solicitud" data-src="../structures/requests/index.html">Solicitudes</a>
-        <a href="layout/cartas" class="sidebar__nav-link user-carta" data-src="../structures/release_letters/index.html">Cartas de Liberación</a>
-        <a href="layout/documentos" class="sidebar__nav-link user-documento" data-src="../structures/documents/index.html">Documentos</a>
+        <a  class="sidebar__nav-link user-plantilla" data-src="profile.html">Perfil</a>
+        <a href="layout/alumnos" class="sidebar__nav-link user-alumno" data-src="../students/index.html">Alumnos</a>
+        <a href="layout/plantillas" class="sidebar__nav-link user-plantilla" data-src="../templates/index.html">Plantillas</a>
+        <a href="layout/instituciones" class="sidebar__nav-link user-institucion" data-src="../institutions/index.html">Instituciones</a>
+        <a href="layout/responsables" class="sidebar__nav-link user-responsable" data-src="../program_manager/index.html">Responsables</a>
+        <a href="layout/solicitudes" class="sidebar__nav-link user-solicitud" data-src="../requests/index.html">Solicitudes</a>
+        <a href="layout/cartas" class="sidebar__nav-link user-carta" data-src="../release_letters/index.html">Cartas de Liberación</a>
+        <a href="layout/documentos" class="sidebar__nav-link user-documento" data-src="../documents/index.html">Documentos</a>
       </nav>
     </aside>
 
@@ -143,3 +144,4 @@
   </script>
 </body>
 </html>
+
