--- a/structures/layout.html
+++ b/structures/layout.html
@@ -34,6 +34,7 @@
         <div class="sidebar__title">SocialITEC</div>
       </div>
       <nav class="sidebar__nav">
+        <a  class="sidebar__nav-link user-plantilla" data-src="profile.html">Perfil</a>
         <a href="layout/encargados" class="sidebar__nav-link user-encargado" data-src="../structures/services_manager/index.html">Encargados</a>
         <a href="layout/alumnos" class="sidebar__nav-link user-alumno" data-src="../structures/students/index.html">Alumnos</a>
         <a href="layout/plantillas" class="sidebar__nav-link user-plantilla" data-src="../structures/templates/index.html">Plantillas</a>
