--- a/structures/profile.html
+++ b/structures/profile.html
@@ -122,7 +122,7 @@
     <div class="profile-container">
       <!-- Header Section -->
       <div class="profile-header">
-        <img src="../../images/good.png" alt="Profile Image" />
+        <img src="../images/good.png" alt="Profile Image" />
         <div>
           <div class="name" id="profile-name">Nombre del Administrador</div>
           <div class="email" id="profile-email">Correo: admin@ejemplo.com</div>
